--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <h2>Skills</h2>
     <ul class="skills">
         <li>Network Security</li>
-        <li>Ethical Hacking (Beginner)</li>
+        <li>Ethical Hacking </li>
         <li>Linux & Command Line</li>
         <li>Python for Security</li>
         <li>SIEM Tools (Basics)</li>
